language_tests/outputs/invalid/for_loop_non_iterable.out
error: type 'NotIterable' does not conform to interface 'Iterable'
 -> language_tests/source_files/invalid/for_loop_non_iterable.tr:9:4
    for i in n {
    ^^^^^^^^^^^^
        std.print(i)
    }
     ^
error: type 'NotIterable.Iterator' does not conform to interface 'Iterator'
 -> language_tests/source_files/invalid/for_loop_non_iterable.tr:9:4
    for i in n {
    ^^^^^^^^^^^^
        std.print(i)
    }
     ^
error: expected string, found NotIterable.Iterator.Element
 -> language_tests/source_files/invalid/for_loop_non_iterable.tr:10:18
	        std.print(i)
	                  ^
